fixed spacing

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,10 @@
   padding: 40px;
 }
 
+.hero .about {
+  padding: 30px;
+}
+
 .hero img {
   border: 10px solid #f6f6f6;
   border-radius: 100%;
@@ -30,15 +34,24 @@
 .nav-bar {
   background: #f6f6f6;
   height: 60px;
-  padding: 10px 20px;
+  padding: 0 70px;
 }
 
 .nav-bar .logo {
+  color: #BA2732;
   float: left;
-  font-size: 22px;
+  font-size: 30px;
+  line-height: 60px;
+  font-weight: bold;
 }
 
 .nav-bar .nav {
   float: right;
-  font-size: 22px;
+  font-size: 20px;
+  line-height: 60px;
+}
+
+.nav-bar .nav a {
+  color: #BA2732;
+  padding: 0 20px;
 }
